nginx-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: ascii
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels: 
        app: nginx
    spec:
      containers:
      - image: nginx:alpine
        name: asciinema-nginx
        ports:
        - containerPort: 80
        resources: {}
        volumeMounts:
        - mountPath: /etc/nginx/conf.d/default.conf
          name: nginx-claim0
          subPath: default.conf
        - mountPath: /cache
          name: nginx-claim1
      restartPolicy: Always
      volumes:
      - name: nginx-claim0
        configMap:
          name: nginx-configmap
      - name: nginx-claim1
        persistentVolumeClaim:
          claimName: ascii-claim4
status: {}
