redis.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: redis-master
  namespace: ascii
spec:
  serviceName: "redis-master"
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
        role: master
        tier: backend
    spec:
      containers:
      - name: master
        image: bitnami/redis:latest
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
        ports:
        - containerPort: 6379
          name: master
        livenessProbe:
          exec:
            command:
            - redis-cli
            - ping
          initialDelaySeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command:
            - redis-cli
            - ping
          initialDelaySeconds: 5
          timeoutSeconds: 1
        volumeMounts:
        - name: datadir
          mountPath: /bitnami
  volumeClaimTemplates:
  - metadata:
      name: datadir
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
