tmp.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rails
  name: rails
  namespace: ascii
spec:
  ports:
  - port: 4000
    protocol: TCP
    targetPort: 4000
  selector:
    app: rails
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
