ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/affinity: cookie
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/add-base-url: 'true'
    ingress.kubernetes.io/ssl-redirect: 'true'
    ingress.kubernetes.io/session-cookie-hash: sha1
    ingress.kubernetes.io/session-cookie-name: route
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/myasciinema)$ $1/myasciinema/ permanent;
  name: asciigress
  namespace: ascii
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
        path: /myasciinema
